Englobando teclado principal

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             </section>
             <section class="teclados">
                 <!-- Teclado -->
-                <div class="teclado">
-                    <!-- Teclado Limpar -->
-                    <div class="teclado_limpar"></div>
-                    <!-- Teclado númerico -->
-                    <div class="teclado_numerico"></div>
+                <div class="teclado-container">
+                    <div class="teclado_principal">
+                        <!-- Teclado Limpar -->
+                        <div class="teclado_limpar"></div>
+                        <!-- Teclado númerico -->
+                        <div class="teclado_numerico"></div>
+                    </div>
                     <!-- Teclado de ações -->
                     <div class="teclado_acao"></div>
                 </div>
