--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         href="https://github.com/Felipe-Tamura"
         target="_blank"
         style="color: #fff"
-        >&copy;Copyright 2024 Felipe Pereira Tamura</a
+        >&copy;2024 Felipe Pereira Tamura</a
       >
     </footer>
     <script src="./static/js/script.js"></script>
