--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
   <body>
     <main>
+
       <section class="calculadora">
+
         <section class="telas">
           <!-- Tela da calculadora -->
           <div class="tela_calc"></div>
           <!-- Simbolo da ação -->
           <div class="tela_simbolo"></div>
         </section>
+
         <section class="teclados">
           <!-- Teclado -->
           <div class="teclado-container">
@@ -30,7 +33,9 @@
           </div>
         </section>
       </section>
+
       <section class="sessãoHistorico">
+
         <button type="button" class="btn_historico">&#8230;</button>
         <div class="historico">
           <table class="tabela_historico escondido">
@@ -43,17 +48,19 @@
             <tbody class="linhas_historico"></tbody>
           </table>
         </div>
+
       </section>
+
     </main>
 
     <footer>
-      <a
-        href="https://github.com/Felipe-Tamura"
-        target="_blank"
-        style="color: #fff"
-        >&copy;2024 Felipe Pereira Tamura</a
-      >
+      <div>
+        <a href="https://github.com/Felipe-Tamura" target="_blank">
+          &copy;2024 Felipe Pereira Tamura
+        </a>
+      </div>
     </footer>
+
     <script src="./static/js/script.js"></script>
   </body>
 </html>
